# VoxelEngine

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
.claude/: settings.local.json
.github/workflows/: build.yml
VoxelEngine/: MAIN.cpp  VoxelEngine.vcxproj  VoxelEngine.vcxproj.filters  default.frag  imgui.ini
cmake/: embed_resources.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: BlockTypes.cpp  BlockTypes.h  CMakeLists.txt  CaveGenerator.cpp  CaveGenerator.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  Inventory.cpp  JobSystem.cpp  MAIN.cpp  MainGlobals.cpp  MainGlobals.h  MainMenu.cpp  MainMenu.h  Meshing.cpp  Meshing.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Raycast.cpp  RegionManager.cpp  RegionManager.h  ShaderClass.cpp  ShaderClass.h  SurvivalSystem.cpp  TerrainGenerator.cpp  TerrainGenerator.h  WaterSimulator.cpp  WaterSimulator.h  default.frag  default.vert  destroy.frag  destroy.vert  main.cpp  particle.frag  water.frag  water.vert
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioTypes.h
src/core/: GameState.h  MainGlobals.cpp  MainGlobals.h  Renderer.cpp  Renderer.h  WorldSession.cpp  WorldSession.h  main.cpp
src/gameplay/: Inventory.cpp  Inventory.h  Player.cpp  Player.h  Raycast.cpp  Raycast.h  SurvivalSystem.cpp  SurvivalSystem.h
src/rendering/: Camera.cpp  Camera.h  ItemModelGenerator.cpp  ItemModelGenerator.h  Meshing.cpp  Meshing.h  ParticleSystem.cpp  ParticleSystem.h  ToolModelGenerator.cpp  ToolModelGenerator.h
src/rendering/opengl/: EBO.h  ShaderClass.cpp  ShaderClass.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/shaders/: default.frag  default.vert  item_model.frag  item_model.vert  particle.frag  particle.vert  selection.frag  selection.vert  tool_model.frag  tool_model.vert  water.frag  water.vert
src/ui/: DebugUI.cpp  DebugUI.h  HUD.cpp  HUD.h  MainMenu.cpp  MainMenu.h
src/utils/: BlockTypes.cpp  BlockTypes.h  CoordUtils.h  JobSystem.cpp  JobSystem.h
src/world/: Biome.cpp  Biome.h  CaveGenerator.cpp  CaveGenerator.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  RegionManager.cpp  RegionManager.h  TerrainGenerator.cpp  TerrainGenerator.h  WaterSimulator.cpp  WaterSimulator.h
tests/: CMakeLists.txt  test_block_types.cpp  test_coord_utils.cpp
